--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
 <body>
 
 <!-- Header -->
-<header style="background:#1f5d24;color:#ffffff;padding:25px 0;text-align:center;border-bottom-left-radius:20px;border-bottom-right-radius:20px;">
-    <div style="display:inline-block;background:#ffffff;padding:10px 20px;border-radius:15px;">
-        <img src="logo.png" alt="VSG Logo" style="height:70px;" />
+<header style="background:#1f5d24;color:#ffffff;padding:30px 0;text-align:center;border-bottom-left-radius:25px;border-bottom-right-radius:25px;">
+    <div style="display:inline-block;background:#ffffff;padding:18px;border-radius:50%;">
+        <img src="logo.png" alt="VSG Logo" style="height:85px;width:auto;" />
     </div>
-    <h1 style="margin-top:15px;font-size:28px;font-weight:600;color:#ffffff;">VSG Business Solutions Inc - Careers</h1>
+    <h1 style="margin-top:18px;font-size:30px;font-weight:600;color:#ffffff;text-align:center;">VSG Business Solutions Inc - Careers</h1>
 </header>
 
 <!-- Job Section -->
@@ -73,10 +73,10 @@
 </div>
 
 <!-- Footer -->
-<footer style="background:#1f5d24;color:#ffffff;padding:25px 0;text-align:center;border-top-left-radius:20px;border-top-right-radius:20px;">
-    <div style="display:flex;justify-content:center;gap:60px;flex-wrap:wrap;font-size:16px;">
+<footer style="background:#1f5d24;color:#ffffff;padding:30px 0;text-align:center;border-top-left-radius:25px;border-top-right-radius:25px;">
+    <div style="display:flex;justify-content:center;align-items:center;gap:70px;flex-wrap:wrap;font-size:17px;text-align:center;">
         <div><strong>Location:</strong><br>3240 E State St Ext, Ste 203, Hamilton NJ, 08619</div>
-        <div style="border-left:2px solid #ffffff;height:40px;margin-top:10px;"></div>
+        <div style="border-left:2px solid #ffffff;height:45px;"></div>
         <div><strong>Website:</strong><br>www.vsgbusinesssolutions.com</div>
     </div>
 </footer>
