--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
     <div style="display:inline-block;background:#ffffff;padding:18px;border-radius:50%;">
         <img src="logo.png" alt="VSG Logo" style="height:85px;width:auto;" />
     </div>
-    <h1 style="margin-top:18px;font-size:30px;font-weight:600;color:#ffffff;text-align:center;">VSG Business Solutions Inc - Careers</h1>
+    <h1 style="margin-top:18px;font-size:30px;font-weight:700;color:#ffffff;text-align:center;width:100%;">VSG Business Solutions Inc</h1>
+    <h2 style="margin-top:5px;font-size:22px;font-weight:500;color:#ffffff;text-align:center;width:100%;">Job Openings</h2>
 </header>
 
 <!-- Job Section -->
