--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         justify-content: space-between;
         border-top: 2px solid #b8dbb2;
         color: #2f4f2f;
-        font-size: 15px;
+        font-size: 20px;
         flex-wrap: wrap;
     }
 
@@ -87,9 +87,9 @@
 <!-- Footer -->
 <footer style="background:#1f5d24;color:#ffffff;padding:30px 0;border-top-left-radius:25px;border-top-right-radius:25px;text-align:center;">
     <div style="display:flex;justify-content:center;align-items:center;gap:80px;text-align:center;width:100%;">
-        <div style="text-align:center;"><strong>Location:</strong><br>3240 E State St Ext, Ste 203, Hamilton NJ, 08619</div>
+        <div style="text-align:center;"><strong>Location</strong><br>3240 E State St Ext, Ste 203, Hamilton NJ, 08619</div>
         <div style="height:45px;border-left:2px solid #ffffff;"></div>
-        <div style="text-align:center;"><strong>Website:</strong><br>www.vsgbusinesssolutions.com</div>
+        <div style="text-align:center;"><strong>Website</strong><br>www.vsgbusinesssolutions.com</div>
     </div>
 </footer>
 
