--- a/index.html
+++ b/index.html
@@ -59,24 +59,37 @@
 <body>
 
 <!-- Header -->
-<header style="background:#1f5d24;color:#ffffff;padding:30px 0;text-align:center;border-bottom-left-radius:25px;border-bottom-right-radius:25px;display:flex;flex-direction:column;align-items:center;">
+<header style="
+    background:#1f5d24;
+    color:#ffffff;
+    padding:30px 0;
+    border-bottom-left-radius:25px;
+    border-bottom-right-radius:25px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    position:relative;
+">
 
-    <div style="background:#ffffff;padding:18px;border-radius:50%;display:flex;justify-content:center;align-items:center;">
-        <img src="logo.png" alt="VSG Logo" style="height:85px;width:auto;" />
+    <!-- Logo on left -->
+    <div style="position:absolute; left:30px; display:flex; align-items:center;">
+        <div style="background:#ffffff;padding:18px;border-radius:50%;display:flex;justify-content:center;align-items:center;">
+            <img src="logo.png" alt="VSG Logo" style="height:85px;width:auto;" />
+        </div>
     </div>
 
-    <!-- Centered Header Text Block -->
-    <div style="display:flex;flex-direction:column;align-items:center;margin-top:10px;width:100%;">
-        <h1 style="margin:10px 0 0 0;font-size:30px;font-weight:700;color:#ffffff;text-align:center;">
+    <!-- Centered Text -->
+    <div style="text-align:center;">
+        <h1 style="margin:0;font-size:30px;font-weight:700;color:#ffffff;">
             VSG Business Solutions Inc
         </h1>
-
-        <h2 style="margin:5px 0 0 0;font-size:24px;font-weight:700;color:#ffffff;text-align:center;">
+        <h2 style="margin-top:5px;font-size:24px;font-weight:700;color:#ffffff;">
             Job Openings
         </h2>
     </div>
 
 </header>
+
 
 <!-- Job Section -->
 <div class="job-section" style="border:1px solid #ddd;border-radius:20px;padding:30px;box-shadow:0 2px 8px rgba(0,0,0,0.1);">
